# py_thumbnail_maker

./: .gitignore  README.md  pyproject.toml
py_thumbnail_maker/: ai_to_pdf.py  img_picker.py  main.py  path_isExists.py  path_to_img_info.py  resize.py
tests/: test_py_thumbnail_maker.py
