[tool.poetry]
name = "py_thumbnail_maker"
version = "0.1.0"
description = ""
authors = ["renmurakami <autoeyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.4"
Pillow = "^9.1.1"
svglib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
